# plot_styler

./: .gitignore  README.md  pyproject.toml
doc/: measuring-latex-templates.md
examples/: demo.py
plot_styler/: __init__.py  core.py  palettes.json  widths.json
plot_styler/palettes/: colorblind_safe.txt  default.txt  muted.txt  vibrant.txt  warm.txt
plot_styler/styles/: acl-small.mplstyle  acl-tiny.mplstyle  acl.mplstyle  base.mplstyle  icml-small.mplstyle  icml-tiny.mplstyle  icml.mplstyle  neurips-small.mplstyle  neurips-tiny.mplstyle  neurips.mplstyle
