[project]
name = "plot_styler"
version = "0.1.0"
description = "Reusable matplotlib style sheets for NLP/ML conference papers."
requires-python = ">=3.8"
dependencies = ["matplotlib>=3.5"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["plot_styler*"]

[tool.setuptools.package-data]
plot_styler = ["styles/*.mplstyle", "widths.json"]
